--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Interactive Covid-19 map - virtual peer learning activity"
+      content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -27,18 +27,9 @@
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css' rel='stylesheet' />
     <title>Peer Learning</title>
   </head>
-  <script>
-    // TogetherJS configuration would go here, but we'll talk about that
-    // later
-    TogetherJSConfig_hubBase = "https://useful-plant-eoraptor.glitch.me/";
-    TogetherJSConfig_cloneClicks = false;
-    TogetherJSConfig_autoStart = true;
-  </script>
-  <script src="https://togetherjs.com/togetherjs-min.js"></script>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script src="https://d3js.org/d3-dsv.v2.min.js"></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
